--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "react web app server",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "test": "jest"
   },
